// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<tr
  className="hoverShadeGray"
>
  <td>
    <button
      aria-label="Expand"
      className="button tapTransition enabled"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <div
        className="pog transparent"
        style={
          Object {
            "height": 24,
            "width": 24,
          }
        }
      >
        <svg
          aria-hidden={true}
          aria-label=""
          className="icon darkGray iconBlock"
          height={12}
          role="img"
          viewBox="0 0 24 24"
          width={12}
        >
          <path
            d="test-file-stub"
          />
        </svg>
      </div>
    </button>
  </td>
  <div>
    row cells
  </div>
</tr>
`;

exports[`renders correctly with explicit hover 1`] = `
<tr
  className="hoverShadeGray"
>
  <td>
    <button
      aria-label="Expand"
      className="button tapTransition enabled"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <div
        className="pog transparent"
        style={
          Object {
            "height": 24,
            "width": 24,
          }
        }
      >
        <svg
          aria-hidden={true}
          aria-label=""
          className="icon darkGray iconBlock"
          height={12}
          role="img"
          viewBox="0 0 24 24"
          width={12}
        >
          <path
            d="test-file-stub"
          />
        </svg>
      </div>
    </button>
  </td>
  <div>
    row cells
  </div>
</tr>
`;

exports[`renders correctly without hover 1`] = `
<tr
  className={null}
>
  <td>
    <button
      aria-label="Expand"
      className="button tapTransition enabled"
      onBlur={[Function]}
      onClick={[Function]}
      onFocus={[Function]}
      onMouseDown={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchCancel={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <div
        className="pog transparent"
        style={
          Object {
            "height": 24,
            "width": 24,
          }
        }
      >
        <svg
          aria-hidden={true}
          aria-label=""
          className="icon darkGray iconBlock"
          height={12}
          role="img"
          viewBox="0 0 24 24"
          width={12}
        >
          <path
            d="test-file-stub"
          />
        </svg>
      </div>
    </button>
  </td>
  <div>
    row cells
  </div>
</tr>
`;
